[gd_scene load_steps=12 format=3 uid="uid://cnd4ro8riyrsl"]

[ext_resource type="Script" uid="uid://diltvl6xuf3ex" path="res://scenes/placeable_bomb.gd" id="1_o1mb1"]
[ext_resource type="Texture2D" uid="uid://1q84bpcfn4iq" path="res://art/normal/danger.png" id="2_81j72"]
[ext_resource type="Texture2D" uid="uid://oaxydskc4bhk" path="res://art/normal/black_bomb.png" id="2_o1mb1"]
[ext_resource type="PackedScene" uid="uid://c8jbhpmgrp2yw" path="res://scenes/detector.tscn" id="3_g8n0a"]
[ext_resource type="Texture2D" uid="uid://d4dm7qpfswkv2" path="res://art/normal/exploding_bomb.png" id="4_g8n0a"]
[ext_resource type="AudioStream" uid="uid://c5r2lnpt0s2sr" path="res://audio/explosion.mp3" id="5_81j72"]

[sub_resource type="Animation" id="Animation_1hf1o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explode:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explode:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explode:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Reds:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Reds:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ExplosionDetector:monitoring")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ja6um"]
resource_name = "explode"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explode:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.2, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explode:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explode:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1.07177, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(0.39, 0, 0, 1), Color(1, 0, 0, 1), Color(0.39, 0, 0, 1), Color(0.991396, 0, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.05, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Reds:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Reds:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.75, 1.1, 1.45),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ExplosionDetector:monitoring")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_nxi8k"]
resource_name = "idle"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1, 1.4, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1), Vector2(0, 2), Vector2(0, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_56fam"]
_data = {
&"RESET": SubResource("Animation_1hf1o"),
&"explode": SubResource("Animation_ja6um"),
&"idle": SubResource("Animation_nxi8k")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o1mb1"]

[node name="PlaceableBomb" type="Node2D" groups=["Bomb"]]
z_index = 1
script = ExtResource("1_o1mb1")

[node name="Reds" type="Node2D" parent="."]
visible = false

[node name="Red" type="Sprite2D" parent="Reds"]
modulate = Color(1, 0, 0, 0.431373)
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_81j72")

[node name="Red2" type="Sprite2D" parent="Reds"]
modulate = Color(1, 0, 0, 0.431373)
position = Vector2(22, 0)
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_81j72")

[node name="Red3" type="Sprite2D" parent="Reds"]
modulate = Color(1, 0, 0, 0.431373)
position = Vector2(-22, 0)
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_81j72")

[node name="Red4" type="Sprite2D" parent="Reds"]
modulate = Color(1, 0, 0, 0.431373)
position = Vector2(0, 22)
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_81j72")

[node name="Red5" type="Sprite2D" parent="Reds"]
modulate = Color(1, 0, 0, 0.431373)
position = Vector2(0, -22)
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_81j72")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_o1mb1")
hframes = 3

[node name="Detector" parent="." instance=ExtResource("3_g8n0a")]
SIZE = Vector2(20, 20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_56fam")
}
autoplay = "idle"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_o1mb1")

[node name="Explode" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_g8n0a")
hframes = 4

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_81j72")
volume_db = -25.0
pitch_scale = 2.0

[node name="ExplosionDetector" type="Area2D" parent="."]
modulate = Color(1, 0, 0, 1)
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ExplosionDetector"]
polygon = PackedVector2Array(-30, -9, -9, -9, -9, -30, 9, -30, 9, -9, 30, -9, 30, 9, 8, 9, 8, 31, -8, 31, -8, 8, -30, 8)

[connection signal="mouse_entered" from="Detector" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Detector" to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_exited"]
[connection signal="area_entered" from="ExplosionDetector" to="." method="_on_explosion_area_entered"]
